qtdeclarative-opensource-src (5.9.5-0ubuntu1) UNRELEASED; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.9.5.
  * Update Vcs fields for migration to salsa.debian.org.

 -- Dmitry Shachnev <mitya57@ubuntu.com>  Sat, 14 Apr 2018 10:18:38 +0300

qtdeclarative-opensource-src (5.9.4-0ubuntu1) bionic; urgency=medium

  * New upstream release.
  * Bump qtdeclarative-abi-5-9-3 -> qtdeclarative-abi-5-9-4.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 25 Feb 2018 00:04:50 -0600

qtdeclarative-opensource-src (5.9.3-0ubuntu1) bionic; urgency=medium

  * New upstream release.
  * Bump Standards-version to 4.1.2, no changes needed.
  * Refresh patches.
  * Update symbols from build logs.
  * Bump qtdeclarative-abi-5-9-2 -> qtdeclarative-abi-5-9-3.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 30 Nov 2017 21:51:27 -0600

qtdeclarative-opensource-src (5.9.2-3ubuntu1) bionic; urgency=medium

  * Merge from Debian unstable, remaining changes:
    - Keep transitional packages until Bionic release.
    - Add testcase_array_iteration.patch which fixes some test hangs.

 -- Dmitry Shachnev <mitya57@ubuntu.com>  Thu, 02 Nov 2017 13:59:13 +0300

qtdeclarative-opensource-src (5.9.2-3) unstable; urgency=medium

  * Bump qtdeclarative-abi version to 5-9-2.
  * Update debian/libqt5qml5.symbols from buildds’ logs.
  * Temporarily revert upstream commit that caused issues in some KDE apps.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 26 Oct 2017 16:27:02 +0300

qtdeclarative-opensource-src (5.9.2-2) experimental; urgency=medium

  * Update for Qt binaries location change in qtbase 5.9.2+dfsg-3.
    - Update .install files for qtdeclarative5-dev-tools, qmlscene and qml.
    - Provide compatibility symlinks for the old location.
    - Bump qtbase5-private-dev and qttools5-dev-tools build-dependencies.
  * Bump Standards-Version to 4.1.1, stop using deprecated Priority: extra.
