@@ -8,7 +8,7 @@ Last-Update: 2017-07-31
 --- a/src/qml/jsruntime/qv4global_p.h
 +++ b/src/qml/jsruntime/qv4global_p.h
 @@ -107,7 +107,7 @@ inline double trunc(double d) { return d
- #  if defined(Q_OS_LINUX)
+ #  if defined(Q_OS_LINUX) || defined(Q_OS_QNX)
  #    define V4_ENABLE_JIT
  #  endif
 -#elif defined(Q_PROCESSOR_MIPS_32) && defined(Q_OS_LINUX)
